cleanup and layouts

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -1,4 +1,4 @@
-<!-- Insert main content here -->
+<!--Insert main content here-->
 <h2>main-content</h2>
 
 <p>
@@ -12,3 +12,4 @@ Ad doctus tacimates est, eam malis equidem et, ne doming everti senserit eum. Ne
 
 His at epicurei mandamus scripserit, mea ad iuvaret tacimates. Dolor melius tacimates ea eos, eu ius nobis constituto. Te vel eros quando aliquam, nisl mazim no vis. Albucius platonem nec id, mentitum vituperata ut cum, duo ferri eripuit in. Vim te impedit vituperata.
 </p>
+<!-- End main content-->
