--- a/_includes/main-responsivemenu-l.html
+++ b/_includes/main-responsivemenu-l.html
@@ -1,2 +1,3 @@
-<!--Place menu button html to access panel 1 on small screens here-->
- ☰ Panel1
+<!--Place right panel show/hide button html here-->
+<h3> ☰ Panel1 </h3>
+<!--End right panel show/hide button html here-->
