--- a/_includes/nav-buttons.html
+++ b/_includes/nav-buttons.html
@@ -1,6 +1,7 @@
-<!--Place html for navigation buttons here-->
-<ul class='ra-monitor'>
+<!--Place navigation buttons html here-->
+<ul>
   <li>nav-buttons</li>
   <li>nav-buttons</li>
   <li>nav-buttons</li>
 </ul>
+<!--End navigation buttons html-->
