--- a/_includes/nav-showhide.html
+++ b/_includes/nav-showhide.html
@@ -1,1 +1,3 @@
- ☰ Menu
+<!--Place navigation menu show/hide button html here-->
+<h3> ☰ Navigation </h3>
+<!--End navigation menu show/hide button html-->
