--- a/_includes/main-responsivemenu-r.html
+++ b/_includes/main-responsivemenu-r.html
@@ -1,2 +1,3 @@
-<!--Place menu button html to access panel 2 on small screens here-->
-Panel2 ◶ 
+<!--Place right panel show/hide button html here-->
+<h3> Panel2 ◶ </h3>
+<!--End right panel show/hide button html here-->
