--- a/_includes/panel2-content.html
+++ b/_includes/panel2-content.html
@@ -1,3 +1,4 @@
+<!--Place right/bottom panel content html here-->
 <ul>
   <li>panel2-content</li>
   <li>panel2-content</li>
@@ -14,3 +15,4 @@ Ad doctus tacimates est, eam malis equidem et, ne doming everti senserit eum. Ne
 
 His at epicurei mandamus scripserit, mea ad iuvaret tacimates. Dolor melius tacimates ea eos, eu ius nobis constituto. Te vel eros quando aliquam, nisl mazim no vis. Albucius platonem nec id, mentitum vituperata ut cum, duo ferri eripuit in. Vim te impedit vituperata.
 </p>
+<!--End right/bottom panel content html-->
