--- a/css/ra.styl
+++ b/css/ra.styl
@@ -49,14 +49,12 @@ img
 #ra-panel-l
   position absolute
   width panelsize
-  max-width 100%
   height 100%
-  overflow-y scroll
 
 /* ra-headmatter element contains the header, subheader, and nav
  * 
  * The ra framework will move the headmatter from to top of the screen or 
- * the top of panel1 depending on screen size
+ * the top of panel1-content depending on screen size
  * 
  * ra-main-responsivemenu only appears when screen is small
  * contains buttons to show and hide side panels
@@ -85,12 +83,19 @@ img
 
 /* responsivemenu button shows/hides left panel on click
  */
-#ra-main-responsivemenu-btn-l
-  float left
+#ra-responsivemenu-btn-l
+  position absolute
+  left 0
+  top 0
 /* responsivemenu button shows/hides right panel on click
  */
-#ra-main-responsivemenu-btn-r
-  float right
+#ra-responsivemenu-btn-r
+  position absolute
+  right 0
+  top 0
+#ra-responsivemenu-header
+  display inline
+  text-align center
 
 /* main full screen content */
 #ra-main
@@ -106,8 +111,8 @@ img
 #ra-panel-r
   position absolute
   bottom 0
-  overflow-y auto
-
+#ra-panel-r-content
+  overflow-y scroll
 
 /* ra-cover covers the main content on small screens when side panels are open
  * clicking on the cover returns the view to the main content
@@ -124,14 +129,18 @@ img
     left panelsize
   #ra-panel-l
     left 0
+  #ra-panel-l-content
+    height inherit
+    overflow-y scroll
   #ra-panel-r
     left panelsize
-    height auto
     min-height 0
-    /* default max height for panel when at screen bottom */
-    max-height 40%
     width 100%
-  #ra-main-responsivemenu
+    /* default max height for panel when at screen bottom */
+  #ra-panel-r-content
+    max-height 200px
+   
+  #ra-responsivemenu
     display none
   .ra-hidewhenlarge
     display none !important
@@ -141,14 +150,28 @@ img
   #ra-main
     left 0
   #ra-panel-l
-    left panelsize * -1
+    right 100%
+    overflow-y scroll
+  #ra-panel-l-content
+    height 100%
   #ra-panel-r
     width panelsize
-    max-width 100%
     height 100%
-    right panelsize * -1
+    left 100%
   .ra-hidewhensmall
     display none !important
+
+/* full screen mode */
+.ra-fullscreen
+  #ra-panel-l
+    display none
+  #ra-panel-r
+    display none
+  #ra-headmatter
+    display none
+  #ra-responsivemenu
+    display none
+
 
 /* hiding elements */
 .ra-hidden
@@ -157,10 +180,13 @@ img
 /* clearfix */
 .clearfix:before,
 .clearfix:after 
-    content ''
-    display table
+  content ''
+  display table
 .clearfix:after 
-    clear both
+  clear both
+/* ie7 */
+.clearfix
+  zoom 1
 
 /* basic styling for button divs */
 .ra-btn
