--- a/css/style.styl
+++ b/css/style.styl
@@ -16,6 +16,8 @@
   li
     padding 3px
     display inline-block
+    zoom 1
+    *display inline
     list-style none
 
 /* the .ra-small class is added to #ra-container when in small screen mode
@@ -42,5 +44,11 @@
   background #efe
 #ra-main
   background #fee
-#ra-main-responsivemenu
+#ra-responsivemenu
   background #eee
+#ra-nav
+  background #eff
+#ra-nav-buttons
+  background #fef
+#ra-headmatter
+  background #ffe
