--- a/_includes/responsivemenu-l.html
+++ b/_includes/responsivemenu-l.html
@@ -1,3 +1,3 @@
 <!--Place right panel show/hide button html here-->
 <h3> ☰ Panel1 </h3>
-<!--End right panel show/hide button html here-->
+<!--End right panel show/hide button html-->
