--- a/_includes/responsivemenu-r.html
+++ b/_includes/responsivemenu-r.html
@@ -1,3 +1,3 @@
 <!--Place right panel show/hide button html here-->
 <h3> Panel2 ◶ </h3>
-<!--End right panel show/hide button html here-->
+<!--End right panel show/hide button html-->
