--- a/_layouts/ra.html
+++ b/_layouts/ra.html
@@ -10,9 +10,7 @@ options: {}
   <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link href='css/ra.css' rel='stylesheet' />
   <link href='css/style.css' rel='stylesheet' />
-  <!--[if IE]>
-  <script src='js/classList.min.js'></script>
-  <![endif]-->
+  <script src='js/classList.js'></script>
 </head>
 <body>
 
@@ -59,7 +57,6 @@ options: {}
       </div>
       <div id='ra-cover' class='ra-hidden'></div>
     </div>
-
     <!--Initialize the responsive app framework!-->
     <script src='js/ra.js'></script>
     <script>ra = new ra({{page.options}});</script>
