cleaned unnecessary content

--- a/_includes/panel2-content.html
+++ b/_includes/panel2-content.html
@@ -1,9 +1,5 @@
 <!--Place right/bottom panel content html here-->
-<ul>
-  <li>panel2-content</li>
-  <li>panel2-content</li>
-  <li>panel2-content</li>
-</ul>
+<h2>Panel 2 content</h2>
 <p>
 Lorem ipsum dolor sit amet, ne eum audiam impetus postulant, vix ut legimus vivendum pertinacia. Eu his legere qualisque, est ei regione labitur. Aliquip integre eu eum. An viderer utroque temporibus vis, quas menandri consectetuer eum cu. Per an illud persius suavitate. Postea corpora periculis eos ne.
 
