--- a/_includes/responsivemenu-header.html
+++ b/_includes/responsivemenu-header.html
@@ -1,3 +1,3 @@
 <!--Place small screen header html here-->
-<h3> responsivemenu-header header </h3>
+<h3> responsivemenu-header </h3>
 <!--End small screen header html-->
